--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     justify-content: center;
 }
 
-.portrait {
+.cv-name {
     font-family: "Arial", sans-serif;
     color: #333333;
     justify-content: center;
