--- a/style.css
+++ b/style.css
@@ -1,9 +1,222 @@
-.portrait {
-    justify-content: center;
+* {
+    box-sizing: border-box;
 }
 
-.cv-name {
-    font-family: "Arial", sans-serif;
-    color: #333333;
+@font-face {
+    font-family: 'opensauce';
+    src: url('assets/fonts/OpenSauceSans-ExtraBold.ttf');
+}
+
+@font-face {
+    font-family: 'DMSans';
+    src: url('assets/fonts/DMSans-Regular.ttf');
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #292929;
+    min-width: 0px;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    min-height: 50px;
+}
+
+.header-container {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
- }
+    width: 50%;
+}
+
+#burger-toggle {
+    display: none;
+}
+
+.burger-btn {
+    display: none;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+}
+
+.burger-btn>span,
+.burger-btn>span::before,
+.burger-btn>span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+    transition-duration: .25s;
+}
+
+.burger-btn>span::before {
+    content: '';
+    top: -8px;
+    transition-duration: .25s;
+}
+
+.burger-btn>span::after {
+    content: '';
+    top: 8px;
+    transition-duration: .25s;
+}
+
+#burger-toggle:checked~.burger-btn>span {
+    transform: rotate(45deg);
+}
+
+#burger-toggle:checked~.burger-btn>span::before {
+    top: 0;
+    transform: rotate(0);
+}
+
+#burger-toggle:checked~.burger-btn>span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+#burger-toggle:checked ~ .menu-list {
+    visibility: visible;
+  }
+
+
+.menu-list {
+    display: flex;
+    padding: 0;
+    margin: 10px 0 0 40px;
+    list-style: none;
+}
+
+.menu-link {
+    text-align: center;
+    text-decoration: none;
+    font-family: 'DMSans';
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #e08805;
+    padding: 10px;
+}
+
+.menu-link:hover {
+    background-color: #111111;
+}
+
+.title-container {
+    display: flex;
+    height: 270px;
+
+}
+
+.title-text {
+    writing-mode: vertical-lr;
+    text-anchor: middle;
+    text-align: center;
+    transform: rotate(180deg);
+    font-family: 'DMSans';
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #e08805;
+    margin-right: 15px;
+    margin-left: 0px;
+
+}
+
+.profile-name {
+    text-align: left;
+    margin: auto;
+    margin-left: 0;
+
+    font-family: opensauce;
+    line-height: 1.2;
+    font-size: 100px;
+    color: #ffffff;
+    margin-right: 15px;
+    z-index: 1;
+}
+
+.profile-picture {
+    display: flex;
+    height: 350px;
+
+}
+
+@media (max-width: 1000px) {
+    .header-container {
+        flex-direction: column;
+        width: 100vw;
+    }
+
+    .profile-picture {
+        width: 65vw;
+        height: auto;
+        margin: auto;
+    }
+
+    .leftside {
+        margin: auto;
+    }
+}
+
+@media (max-width: 700px) {
+    .profile-name {
+
+        font-size: 78px;
+
+    }
+
+    .title-text {
+        font-size: 17px;
+        letter-spacing: 2px;
+    }
+
+    .title-container {
+        display: flex;
+        height: 255px;
+
+    }
+
+    .menu-list {
+        display: block;
+        visibility: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 50px;
+        width: 300px;
+        background-color: #545252;
+        border-radius: 3px;
+        opacity: 99%;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);  
+        list-style: none;
+        text-align: center;
+        z-index: 2;
+    }
+
+    .burger-btn {
+        display: flex;
+        z-index: 3;
+    }
+    .menu-item {
+        padding: 15px;
+    }
+}
