--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     src: url('assets/fonts/DMSans-Regular.ttf');
 }
 
+@font-face {
+    font-family: 'DMSans-Bold';
+    src: url('assets/fonts/DMSans-Bold.ttf');
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -22,14 +27,14 @@ body {
     justify-content: space-between;
     background-color: #292929;
     min-width: 0px;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     margin: 0;
     padding: 0;
     overflow-x: hidden;
 }
 
 .container {
-    max-width: 1440px;
+    /* max-width: 1440px; */
     margin: 0 auto;
     min-height: 50px;
 }
@@ -38,7 +43,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 50%;
+    /* width: 50%; */
 }
 
 #burger-toggle {
@@ -102,7 +107,7 @@ body {
 .menu-list {
     display: flex;
     padding: 0;
-    margin: 10px 0 0 40px;
+    margin: 10px 0 0 35px;
     list-style: none;
 }
 
@@ -128,20 +133,22 @@ body {
 
 .leftside {
     margin-left: 25px;
+    margin-bottom: 25px;
 }
 
 .title-text {
     writing-mode: vertical-lr;
     text-anchor: middle;
-    text-align: end;
+    text-align:end;
     transform: rotate(180deg);
     font-family: 'DMSans';
     font-size: 20px;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 4.5px;
     color: #e08805;
-    margin-right: 15px;
-    margin-left: 0px;
+    
+    margin: 0px;
+    width: 26px;
 
 }
 
@@ -150,22 +157,57 @@ body {
     flex-direction: column;
     line-height: 0.9;
     margin: 0;
-
+    margin-right: 25px;
+    margin-left: 15px;
     font-family: opensauce;
-
     font-size: 100px;
     color: #ffffff;
     z-index: 1;
 }
 
-.profile-name>span {
-    padding-bottom: 25px;
+.profile-name>span:first-child {
+    padding-bottom: 40px;
 }
 
 .profile-picture {
     display: flex;
     height: 350px;
 
+}
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    width: 1000px;
+    padding-left: 70px;
+    margin-top: 30px;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.about {
+    width: 1000px; 
+}
+
+
+
+.section > p {
+    font-family: 'DMSans';
+    font-size: 20px;
+
+    color: #ffffff;    
+}
+
+.section-title {
+    font-family: 'DMSans-Bold';
+    font-size: 24px;
+    letter-spacing: 2px;
+    color: #ff9628;  
 }
 
 @media (max-width: 1000px) {
@@ -177,7 +219,7 @@ body {
     .profile-picture {
         width: 80vw;
         height: auto;
-        margin: auto;
+        margin-left: 70px;
     }
 
 
@@ -186,17 +228,20 @@ body {
     }
 
     .title-text {
-        font-size: 2.9vw;
-        letter-spacing: 2.4px;
+        font-size: 3vw;
+        letter-spacing: 3px;
     }
-
+    .main-container {
+        margin-left: 50px;
+        padding-left: 0;
+        width: 85vw;
+    }
+    .section {
+        width: 100%;
+    }
 }
 
 @media (max-width: 768px) {
-
-
-
-
     .title-container {
         margin-top: 55px;
 
@@ -223,6 +268,14 @@ body {
     .burger-btn {
         display: flex;
         z-index: 3;
+    }
+
+    .header-menu {
+        position: fixed;
+        width:100%;
+        height: 55px;
+        background-color: #292929;
+        z-index: 2;
     }
 
     .menu-item {
