--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ body {
 .main-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-around;
+    justify-content: left;
     width: 1000px;
     padding-left: 70px;
     margin-top: 30px;
@@ -217,9 +217,10 @@ body {
     }
 
     .profile-picture {
-        width: 80vw;
+        width: 85vw;
         height: auto;
-        margin-left: 70px;
+        align-self: center;
+        /* margin-left: 70px; */
     }
 
 
@@ -232,12 +233,14 @@ body {
         letter-spacing: 3px;
     }
     .main-container {
-        margin-left: 50px;
+        margin-left: 5vw;
+        align-self: center;
         padding-left: 0;
-        width: 85vw;
+        width: 90vw;
     }
     .section {
         width: 100%;
+        
     }
 }
 
@@ -272,6 +275,7 @@ body {
 
     .header-menu {
         position: fixed;
+        left: 0;
         width:100%;
         height: 55px;
         background-color: #292929;
@@ -280,5 +284,16 @@ body {
 
     .menu-item {
         padding: 15px;
+    }
+}
+
+@media (max-width: 428px) {
+    .profile-name {
+        font-size: 12vw;
+    }
+
+    .title-text {
+        font-size: 3vw;
+        letter-spacing: 3px;
     }
 }
