--- a/style.css
+++ b/style.css
@@ -251,18 +251,18 @@ body {
     margin-top: 20px;
 }
 
-.code>pre {
+.code>pre>code {
 
     background: linear-gradient(#262626, #292929);
     border-radius: 4px;
     border-left: 3px solid #ff9628;
     page-break-inside: avoid;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 1.2;
     max-width: 100%;
     overflow: hidden;
     padding: 10px 10px;
-    margin-top: 25px;
+    margin-top: 5px;
     margin-right: 20px;
     word-wrap: break-word;
 
@@ -364,7 +364,7 @@ footer {
     }
 
     footer {
-        margin-left: 5vw;
+        margin-left: 0;
         width: 90vw;
     }
 }
