--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+:root {
+    --bgcolor: #292929;
+    --codegrad: #262626;
+    --menugrad: #232323;
+    --textcolor: #ffffff;
+    --headertext: #e08805;
+    --titletext: #ff9628;
+}
+
+.light-theme {
+    --bgcolor: #f5f5f5;
+    --codegrad: #dad6d6;
+    --menugrad: #ebebeb;
+    --textcolor: black;
+    --headertext: #41557f;
+    --titletext: #526ea5;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -25,12 +43,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #292929;
+    background-color: var(--bgcolor);
     min-width: 0px;
     /* min-height: 100vh; */
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    transition: background 0.6s ease-in-out;
 }
 
 .container {
@@ -60,6 +79,26 @@ body {
     height: 26px;
     cursor: pointer;
     user-select: none;
+}
+.header-menu {
+    display: flex;
+}
+
+#themeBtn {
+    align-items: center;
+    margin-top: 10px;
+    width: 30px;
+    height: 30px;
+   position: relative; 
+    left:-15px;
+    cursor: pointer;
+    user-select: none;
+    background-size: contain;
+    background-image: url("assets/svg/moon.svg"); 
+}
+
+.light-theme #themeBtn {
+    background-image: url("assets/svg/sun.svg"); 
 }
 
 .burger-btn>span,
@@ -108,7 +147,7 @@ body {
 .menu-list {
     display: flex;
     padding: 0;
-    margin: 10px 0 0 35px;
+    margin: 10px 0 0 10px;
     list-style: none;
 }
 
@@ -118,7 +157,7 @@ body {
     font-family: 'DMSans';
     font-size: 17px;
     text-transform: uppercase;
-    color: #e08805;
+    color: var(--headertext);
     padding: 8px;
 }
 
@@ -146,7 +185,7 @@ body {
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 4.5px;
-    color: #e08805;
+    color: var(--headertext);
 
     margin: 0px;
     width: 26px;
@@ -162,7 +201,7 @@ body {
     margin-left: 15px;
     font-family: opensauce;
     font-size: 100px;
-    color: #ffffff;
+    color: var(--textcolor);
     z-index: 1;
 }
 
@@ -193,14 +232,14 @@ body {
     width: 50%;
     font-family: 'DMSans';
     font-size: 20px;
-    color: #ffffff;
+    color: var(--textcolor);
 }
 
 .section-title {
     font-family: 'DMSans-Bold';
     font-size: 24px;
     letter-spacing: 2px;
-    color: #ff9628;
+    color: var(--titletext);
 }
 
 .about,
@@ -219,7 +258,7 @@ body {
 
 .section-list>li::before {
     content: "> ";
-    color: #ff9628;
+    color: var(--titletext);
     font-family: 'DMSans-Bold';
     font-size: 20px;
 }
@@ -230,9 +269,12 @@ body {
     width: 100%;
 }
 
+.projects>div {
+    margin: 20px 0 20px 0;
+}
 
 .projects img {
-    width: 30%;
+    width: 40%;
     height: min-content;
     padding-top: 5px;
 }
@@ -243,22 +285,18 @@ body {
 
 .projects span>a {
     text-decoration: none;
-    color: #ffffff;
+    color: var(--textcolor);
     font-weight: 700;
-}
-
-.projects>div {
-    margin-top: 20px;
 }
 
 .code>pre>code {
 
-    background: linear-gradient(#262626, #292929);
+    background: linear-gradient(var(--codegrad), var(--bgcolor));
     border-radius: 4px;
-    border-left: 3px solid #ff9628;
+    border-left: 3px solid var(--titletext);
     page-break-inside: avoid;
     font-size: 14px;
-    line-height: 1.2;
+    line-height: 1.7;
     max-width: 100%;
     overflow: hidden;
     padding: 10px 10px;
@@ -315,7 +353,7 @@ body {
 }
 
 .contacts-list > li > a {
-    color: white;
+    color: var(--textcolor);
     text-decoration: none;  
 }
 
@@ -324,11 +362,11 @@ footer {
     justify-content: space-between;
     align-self: center;
     align-items: center;
-    border-top: 3px solid #ff9628;
+    border-top: 3px solid var(--titletext);
     margin: 40px 0 0 70px;
     width: 930px;
     height: 80px;
-    color: #ffffff;
+    color: var(--textcolor);
     font-family: 'DMSans';
     font-size: 18px;
 }
@@ -389,7 +427,7 @@ footer {
         margin: 0;
         padding: 50px 0;
         width: 300px;
-        background: linear-gradient(90deg, #232323, #292929);
+        background: linear-gradient(90deg, var(--menugrad), var(--bgcolor));
         border-radius: 5px;
         opacity: 99%;
         /* box-shadow: 5px rgba(0, 0, 0, .2); */
@@ -417,8 +455,14 @@ footer {
         left: 0;
         width: 100%;
         height: 55px;
-        background-color: #292929;
+        background-color: var(--bgcolor);
+        transition: background 0.6s ease-in-out;
         z-index: 2;
+    }
+
+    #themeBtn {
+    margin-left: 25px;
+    left: 0px;
     }
 
     .menu-item {
@@ -437,5 +481,12 @@ footer {
     }
     .contacts-list {
         flex-direction: column; 
+    }
+    .projects span {
+       font-size: 15px;
+    }
+
+    .code>pre>code {
+        font-size: 11px;
     }
 }
